--- a/docs/info.rmd
+++ b/docs/info.rmd
@@ -4,14 +4,17 @@ bibliography: literature.bib
 ---
 ### Introduction
 
-This page provides data access to the *Support Vector Machines Democracy Indicator (SVMDI)* as 
-proposed by @Gruendler2016 in the [European Journal of Political Economy](http://www.sciencedirect.com/science/article/pii/S0176268016300222).
+This page provides access to the *Support Vector Machines Democracy Indicator (SVMDI)* as 
+proposed by @Gruendler2018.
 
 The approach exploits Support Vector Machines (SMVs), a mathematical algorithm for pattern recognition, 
 which is a nonlinear generalization of the Generalized Portrait algorithm. Using this new algorithm 
 enables computation of a detailed measurement of democracy. The main advantage is that the aggregation 
 strategy of the underlying attributes is not arbitrary (as is typically the case, not only with 
 regard to democracy indices), but is transferred to a nonlinear optimization problem. 
+
+A previous version of the indicator has been published as [Gründler, Klaus, and
+Tommy Krieger. 2016. Democracy and Growth: Evidence from a Machine Learning Indicator.” European Journal of Political Economy. Vol. 45: pp. 85–107.](http://www.sciencedirect.com/science/article/pii/S0176268016300222) 
 
 #### Please cite as
 
