--- a/docs/literature.bib
+++ b/docs/literature.bib
@@ -11,4 +11,11 @@
   url     = {http://www.sciencedirect.com/science/article/pii/S0176268016300222},
 }
 
+@Article{Gruendler2018,
+  author  = {Klaus Gründler and Tommy Krieger},
+  title   = {Machine Learning Indicators, Political Institutions, and Economic Development},
+  journal = {CESifo Working Paper},
+  year    = {2018},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
